# peakfit

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/peakfit/: __init__.py  continuum.py  cube.py  features.py  polynomial.py  refine.py  wavelength.py
tests/: test_continuum.py  test_cube.py  test_features.py  test_peakfit.py  test_polynomial.py  test_refine.py  test_wavelength.py
