[project]
name = "peakfit"
version = "0.1.0"
description = "A package that fits a peak to discretely sampled data."
authors = [
    {name = "Jan Hansen",email = "hansnpunk@googlemail.com"}
]
license = {text = "GNU General Public License (GPL) v3"}
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "poetry (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
