[project]
name = "peakfit"
version = "0.1.0"
description = "A package that fits a peak to discretely sampled data."
authors = [
    {name = "Jan Hansen", email = "hansnpunk@googlemail.com"},
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "numpy>=2.4,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
notebook = [
    "scipy>=1.17",
    "matplotlib>=3.10",
    "jupyter>=1.1",
    "ipykernel>=7.2",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
