[project]
name = "peakfit"
version = "0.1.0"
description = "A package that fits a peak to discretely sampled data."
authors = [
    {name = "Jan Hansen", email = "hansnpunk@googlemail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "numba>=0.64.0",
    "numpy>=2.4,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.12.0",
]
notebook = [
    "scipy>=1.17",
    "matplotlib>=3.10",
    "jupyter>=1.1",
    "ipykernel>=7.2",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-exclude = ["notebooks"]
